@@ -624,13 +624,10 @@ Usage:
 *iv_cluster = \&PDL::iv_cluster;
 sub PDL::iv_cluster {
   my ($var_ref) = @_;
-
-  my ($var, $map_ref) = PDL::Stats::Basic::_array_to_pdl( $var_ref );
+  my ($var, $map_ref) = PDL::Stats::Basic::code_ivs( $var_ref );
   my $var_a = yvals( short, $var->nelem, $var->max->sclr + 1 ) == $var;
-
   $var_a = $var_a->setbadif( $var->isbad ) if $var->badflag;
-
-  return wantarray? ($var_a, $map_ref) : $var_a;
+  wantarray ? ($var_a, $map_ref) : $var_a;
 }
 
 =head2 pca_cluster
