@@ -1,5 +1,6 @@
 - fix anova_rptd problem depending on grouping of IVs (part of RT#97925)
 - do all plotting with PDL::Graphics::Simple
+- add Basic::code_ivs
 
 0.853 2025-01-03
 - uses PDL 2.096+ lib/*.pd format for quicker builds
@@ -197,7 +198,7 @@
   - use short-circuit ISBAD(a) || ISBAD(b) instead of ISGOOD(a) && ISGOOD(b) in bad value processing.
 
 0.2.3   08/24/2009
-  - ***anova interface change*** IV names now passed in \%opt instead of @ ref. I appologize for the interface change, but it matches the new method plot_means, and makes it easier to pass IVs themselves. I promise that such interface changes will be extremely rare, if at all.
+  - ***anova interface change*** IV names now passed in \%opt instead of @ ref. I apologize for the interface change, but it matches the new method plot_means, and makes it easier to pass IVs themselves. I promise that such interface changes will be extremely rare, if at all.
   - anova now supports bad value in DV.
   - Added plot_means in PDL::Stats::GLM. anova plots highest order interaction by default.
   - Added plot_scree in PDL::Stats::GLM. pca does scree plot by default.
